k8s/car/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car
  template:
    metadata:
      labels:
        app: car
    spec:
      containers:
        - name: car
          image: car:2
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
