k8s/car/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-service
spec:
  selector:
    app: car
  ports:
    - name: http
      port: 3001
      targetPort: 3000
  type: LoadBalancer
