k8s/car/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/car
            pathType: Prefix
            backend:
              service:
                name: car-service
                port:
                  number: 80
